--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,9 +2,11 @@
 <html>
     <head>
         <title><%= title %></title>
-        <link rel='stylesheet' href='<%= static %>/css/style.css' />
+        <link rel='stylesheet' href='/css/app.css' />
     </head>
     <body>
         <h1>ToDoList</h1>
+        <div id='app'></div>
+        <script src="/js/app.js"></script>
     </body>
 </html>
