--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,11 +2,11 @@
 <html>
     <head>
         <title><%= title %></title>
-        <link rel='stylesheet' href='<%= static %>css/index.css' />
+        <link rel='stylesheet' href='<%= static %>css/<%= fileJson.css%>' />
     </head>
     <body>
         <h1>ToDoList</h1>
         <div id='app'></div>
-        <script src="<%= static %>js/index.js"></script>
+        <script src="<%= static %>js/<%= fileJson.js%>"></script>
     </body>
 </html>
